--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
@@ -64,8 +64,8 @@
         Base: rabbit_dead
   - type: Butcherable
     spawned:
-    - id: CP14FoodMeatLamb # to replace the rabbit meat
-      amount: 1
+    - id: CP14FoodMeatRabbit
+      amount: 2
   - type: Bloodstream
     bloodMaxVolume: 50
     bloodReagent: CP14Blood
@@ -142,8 +142,16 @@
         Base: dead
   - type: Butcherable
     spawned:
-    - id: CP14FoodMeatLamb # to replace the pig meat and add chunks of fat
-      amount: 5
+    - id: CP14FoodMeatPig
+      amount: 3
+    - id: CP14FoodMeatPig
+      amount: 1
+      prob: 0.5
+    - id: CP14FoodMeatPigLeg
+      amount: 1
+    - id: CP14FoodMeatPigLeg
+      amount: 1
+      prob: 0.3
   - type: Bloodstream
     bloodMaxVolume: 150
     bloodReagent: CP14Blood
@@ -187,6 +195,10 @@
   - type: Tag
     tags:
     - CP14Boar
+  - type: Butcherable
+    spawned:
+    - id: CP14FoodMeatBoar
+      amount: 4
   - type: Reproductive
     partnerWhitelist:
       tags:
