--- a/Resources/Prototypes/_CP14/Recipes/Construction/furniture.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/furniture.yml
@@ -18,24 +18,6 @@
 
 - type: construction
   crystallPunkAllowed: true
-  name: Wooden barrel
-  description: The simplest design for storing liquids.
-  id: CP14BaseBarrel
-  graph: CP14BaseBarrel
-  startNode: start
-  targetNode: CP14BaseBarrel
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Furniture/Barrels/barrel.rsi
-    state: barrel
-  objectType: Structure
-  placementMode: PlaceFree
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
   name: Wooden table
   description: A simple table made of boards.
   id: CP14TableWooden
@@ -168,78 +150,6 @@
 
 - type: construction
   crystallPunkAllowed: true
-  name: Wooden chest
-  description: a simple wooden chest for easy storage of junk.
-  id: CP14WoodenChest
-  graph: CP14WoodenChest
-  startNode: start
-  targetNode: CP14WoodenChest
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Storage/Crates/woodenchest.rsi
-    state: icon
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  name: Workbench
-  description: Table for the production of various basic tools.
-  id: CP14Workbench
-  graph: CP14Workbench
-  startNode: start
-  targetNode: CP14Workbench
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Furniture/workbench.rsi
-    state: workbench
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  name: Cooking table
-  description: A table to work with food. Time to cook!
-  id: CP14WorkbenchCooking
-  graph: CP14WorkbenchCooking
-  startNode: start
-  targetNode: CP14WorkbenchCooking
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Furniture/workbench.rsi
-    state: cooking_table
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  name: Sewing table
-  description: A table with embroidery tools to create different clothing and materials.
-  id: CP14WorkbenchSewing
-  graph: CP14WorkbenchSewing
-  startNode: start
-  targetNode: CP14WorkbenchSewing
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Furniture/workbench.rsi
-    state: sewing_table
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
   id: CP14Mannequin
   name: mannequin
   description: Wooden mannequin designed for clothing displaying.
@@ -305,82 +215,6 @@
   icon:
     sprite: _CP14/Structures/Furniture/target.rsi
     state: target_effigy
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canRotate: true
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  id: CP14WoodenDoor
-  name: wooden door
-  description: Not the most solid construction, but it's better than nothing.
-  graph: CP14WoodenDoor
-  startNode: start
-  targetNode: CP14WoodenDoor
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Doors/wooden_door.rsi
-    state: closed
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canRotate: true
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  id: CP14WoodenDoorMirrored
-  name: wooden door (mirrored)
-  description: Not the most solid construction, but it's better than nothing.
-  graph: CP14WoodenDoor
-  startNode: start
-  targetNode: CP14WoodenDoorMirrored
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Doors/wooden_door.rsi
-    state: closed_mirrored
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canRotate: true
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  id: CP14WoodenDoorWindowed
-  name: wooden windowed door
-  description: Not the most solid construction, but it's better than nothing.
-  graph: CP14WoodenDoor
-  startNode: start
-  targetNode: CP14WoodenDoorWindowed
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Doors/wooden_windowed_door.rsi
-    state: closed
-  objectType: Structure
-  placementMode: SnapgridCenter
-  canRotate: true
-  canBuildInImpassable: false
-  conditions:
-    - !type:TileNotBlocked
-
-- type: construction
-  crystallPunkAllowed: true
-  id: CP14WoodenDoorWindowedMirrored
-  name: wooden windowed door
-  description: Not the most solid construction, but it's better than nothing.
-  graph: CP14WoodenDoor
-  startNode: start
-  targetNode: CP14WoodenDoorWindowedMirrored
-  category: construction-category-furniture
-  icon:
-    sprite: _CP14/Structures/Doors/wooden_windowed_door.rsi
-    state: closed_mirrored
   objectType: Structure
   placementMode: SnapgridCenter
   canRotate: true
@@ -505,3 +339,5 @@
   canBuildInImpassable: true
   conditions:
     - !type:TileNotBlocked
+
+#кровать шкаф полка комод ящик
