--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/demiplane_keys.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/demiplane_keys.yml
@@ -33,6 +33,9 @@
       Fun: 1
       Weather: 1
       MapLight: 1
+    selectedModifiers:
+    - EntryRoom
+    - Exit
 
 - type: entity
   id: CP14DemiplaneKeyT2
@@ -54,3 +57,6 @@
       Fun: 1
       Weather: 1
       MapLight: 1
+    selectedModifiers:
+    - EntryRoom
+    - Exit
