--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Demiplanes/unstable_rift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Demiplanes/unstable_rift.yml
@@ -45,25 +45,81 @@
   - type: Damageable
   - type: Destructible
     thresholds:
+    
+    # First wave
     - trigger:
         !type:DamageTrigger
         damage: 50
       behaviors:
-      - !type:DoActsBehavior
-        acts: [ "Destruction" ]
       - !type:SpawnEntitiesBehavior
+        offset: 6
         spawn:
-          CP14DemiplaneKeyT1:
-            min: 0
-            max: 2
+          CP14MobGroupSpawnerMosquito:
+            min: 1
+            max: 1
+    
+    # Second wave
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
       - !type:SpawnEntitiesBehavior
+        offset: 6
+        spawn:
+          CP14MobGroupSpawnerHydras:
+            min: 1
+            max: 1
+    
+    # Third wave
+    - trigger:
+        !type:DamageTrigger
+        damage: 200
+      behaviors:
+      - !type:SpawnEntitiesBehavior
+        offset: 6
+        spawn:
+          CP14MobGroupSpawnerIceSpectres:
+            min: 1
+            max: 1
+      - !type:SpawnEntitiesBehavior
+        offset: 6
+        spawn:
+          CP14MobGroupSpawnerZombie:
+            min: 1
+            max: 1
+    
+    # Destroyed Yay!
+    - trigger:
+        !type:DamageTrigger
+        damage: 300
+      behaviors:
+      - !type:SpawnEntitiesBehavior # Reward
+        offset: 5
+        spawn:
+          CP14SpawnerDemiplaneLootT1:
+            min: 4
+            max: 8
+      - !type:SpawnEntitiesBehavior
+        offset: 2
         spawn:
           CP14DemiplaneKeyT2:
             min: 1
             max: 1
-      - !type:PlaySoundBehavior
+      - !type:SpawnEntitiesBehavior # Exit
+        spawn:
+          CP14DemiplanePasswayRed:
+            min: 1
+            max: 1
+      - !type:PlaySoundBehavior #SFX
         sound:
           collection: GlassBreak
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/demon_dies.ogg
+          params:
+            pitch: 1.5
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
   - type: CP14MagicEnergyExaminable
   - type: CP14MagicEnergyContainer
     maxEnergy: 500
@@ -78,7 +134,7 @@
     proto: CP14MobGroupSpawnerRandom
   - type: CP14DemiplaneStabilizer
   - type: AmbientSound
-    volume: 10
+    volume: 20
     range: 15
     sound:
       path: /Audio/_CP14/Effects/demiplane_heartbeat.ogg
@@ -94,10 +150,9 @@
     offset: 3
     table: !type:GroupSelector
       rolls: !type:RangeNumberSelector
-        range: 1, 2
+        range: 2, 3
       children:
-      - id: CP14MobGroupSpawnerHydras
-      - id: CP14MobGroupSpawnerMosquito
+      - id: CP14MobGroupSpawnerIceSpectres
       - id: CP14MobGroupSpawnerZombie
 
 - type: entity
