--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Demiplanes/unstable_rift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Demiplanes/unstable_rift.yml
@@ -168,6 +168,7 @@
     selectedModifiers:
     - EntryRoom
     - UnstableDemiplaneCrystal #Spawn exit when broken
+    - TimeLimit11
 
 - type: entity
   id: CP14AutoDemiplaneKeyT2
@@ -182,3 +183,4 @@
     selectedModifiers:
     - EntryRoom
     - UnstableDemiplaneCrystal #Spawn exit when broken
+    - TimeLimit11
