--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/beds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/beds.yml
@@ -53,3 +53,6 @@
     noRot: true
   - type: Anchorable
   - type: Pullable
+  - type: Construction
+    graph: CP14WoodenBed
+    node: CP14WoodenBed
