--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -799,3 +799,7 @@ DrinkIrishCarBomb: DrinkIrishSlammer
 #2025-01-06
 ClothingMaskSexyClown: ClothingMaskBlushingClown
 ClothingMaskSexyMime: ClothingMaskBlushingMime
+
+#2025-02-09
+C14IronCabinet: CP14IronCabinet
+C14IronCabinetCargo: CP14IronCabinetCargo
