--- a/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Storage/Crates/crates.yml
@@ -110,9 +110,44 @@
         acts: [ "Destruction" ]
 
 - type: entity
+  id: CP14LargeWoodenCrateFrame
+  name: large wooden crate frame
+  description: Unfinished large wooden crate.
+  parent: 
+  - BaseStructureDynamic
+  - CP14BaseFlammable
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    sprite: _CP14/Structures/Storage/Crates/large_wooden_crate.rsi
+    state: open
+  - type: Damageable
+    damageContainer: Inorganic
+    damageModifierSet: Wood
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 75
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: WoodDestroy
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14WoodenPlanks1:
+            min: 1
+            max: 2
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Construction
+    graph: CP14LargeWoodenCrate
+    node: CP14LargeWoodenCrateFrame
+
+- type: entity
   id: CP14LargeWoodenCrate
   name: large wooden crate
-  description: solid wooden crate
+  description: Solid wooden crate.
   parent: 
   - CP14BaseCrate
   - CP14BaseFlammable
@@ -138,11 +173,48 @@
             max: 4
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
+  - type: Construction
+    graph: CP14LargeWoodenCrate
+    node: CP14LargeWoodenCrate
+
+- type: entity
+  id: CP14SmallWoodenCrateFrame
+  name: small wooden crate frame
+  description: Unfinished small wooden crate frame.
+  parent: 
+  - BaseStructureDynamic
+  - CP14BaseFlammable
+  components:
+  - type: Sprite
+    sprite: _CP14/Structures/Storage/Crates/small_wooden_crate.rsi
+    state: open
+  - type: Damageable
+    damageContainer: Inorganic
+    damageModifierSet: Wood
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: WoodDestroy
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14WoodenPlanks1:
+            min: 1
+            max: 2
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Construction
+    graph: CP14SmallWoodenCrate
+    node: CP14SmallWoodenCrateFrame
 
 - type: entity
   id: CP14SmallWoodenCrate
   name: small wooden crate
-  description: solid wooden crate
+  description: Solid wooden crate.
   parent: 
   - CP14BaseSmallCrate
   - CP14BaseFlammable
@@ -168,3 +240,6 @@
             max: 4
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
+  - type: Construction
+    graph: CP14SmallWoodenCrate
+    node: CP14SmallWoodenCrate
